# hegg

./: .gitignore  BENCHMARKING.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO  baseline.csv  demo.gv  egraph.gv  hegg-test.prof  hegg.cabal  hsym.cabal
.github/workflows/: graphviz.yml  haskell-ci.yml  test.yaml
app/: VizDot.hs
docs/slides/: Makefile  demo.hs  slides.lhs
examples/: CHANGELOG.md  LICENSE  examples.cabal
examples/app/: Main.hs
hegg-recursion-schemes/: CHANGELOG.md  hegg-recursion-schemes.cabal
hegg-recursion-schemes/src/Data/Equality/Graph/: Recursive.hs
hegg-recursion-schemes/src/Data/Equality/Saturation/: Recursive.hs
src/: Database.hs  Dot.hs  EGraph.hs  EMatching.hs  EqualitySaturation.hs  Sym.hs
src/Data/Equality/: Analysis.hs  Extraction.hs  Graph.hs  Graph.hs-boot  Language.hs  Matching.hs  Saturation.hs  Utils.hs
src/Data/Equality/Analysis/: Indexed.hs  Instances.hs  Monadic.hs
src/Data/Equality/Extraction/: Indexed.hs
src/Data/Equality/Graph/: ClassList.hs  ClassList.hs-boot  Classes.hs  Classes.hs-boot  Dot.hs  Indexed.hs  Internal.hs  Internal.hs-boot  Lens.hs  Memo.hs  Monad.hs  Nodes.hs  ReprUnionFind.hs
src/Data/Equality/Graph/Classes/: Id.hs
src/Data/Equality/Graph/Monad/: Indexed.hs
src/Data/Equality/Language/: Indexed.hs
src/Data/Equality/Matching/: Database.hs  Indexed.hs  Pattern.hs
src/Data/Equality/Matching/Pattern/: Indexed.hs
src/Data/Equality/Saturation/: Debug.hs  Indexed.hs  Rewrites.hs  Scheduler.hs
src/Data/Equality/Saturation/Rewrites/: Indexed.hs
src/Data/Equality/Utils/: HList.hs  IntToIntMap.hs  Singleton.hs  SizedList.hs  Untyped.hs
src/EGraph/: EClass.hs  ENode.hs  ReprUnionFind.hs
test/: Bench.hs  Computed.hs  Indexed.hs  Invariants.hs  Jacobi.hs  Lambda.hs  MyLibTest.hs  SimpleSym.hs  Singleton.hs  Sym.hs  SymExpr.hs  T1.hs  T2.hs  T3.hs  T32.hs  T45.hs  T51.hs  Test.hs  VizDot.hs
