cabal-version:      2.4
name:               hegg
version:            0.1.0.0
Tested-With:        GHC ==9.2.2 || ==9.0.2 || ==8.10.7
synopsis: Fast equality saturation in Haskell

description:        Fast equality saturation and equality graphs based on `egg:
                    Fast and Extensible Equality Saturation` and `Relational E-matching`
homepage:           https://github.com/alt-romes/hegg 

bug-reports:        https://github.com/alt-romes/hegg/issues
license:            BSD-3-Clause
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/alt-romes/hegg

library
    ghc-options:      -Wall -Wcompat
    exposed-modules:  Data.Equality.Graph,
                      Data.Equality.Graph.ReprUnionFind,
                      Data.Equality.Graph.Classes,
                      Data.Equality.Graph.Classes.Id,
                      Data.Equality.Graph.Nodes,
                      Data.Equality.Graph.Lens,
                      Data.Equality.Matching,
                      Data.Equality.Saturation,
                      Data.Equality.Extraction,
                      Data.Equality.Language,
                      Data.Equality.Analysis,
                      Data.Equality.Saturation.Scheduler,
                      Database
    if flag(vizdot)
        exposed-modules: Data.Equality.Graph.Dot

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    build-depends:    base >= 4.4 && < 5,
                      text, mtl,
                      data-fix,
                      containers
    if flag(vizdot)
        build-depends: graphviz
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hegg-test
    ghc-options:      -threaded -Wall
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    other-modules:    Invariants, Sym, Lambda
    other-extensions: OverloadedStrings
    build-depends:    base,
                      data-fix,
                      hegg,
                      containers,
                      tasty,
                      tasty-quickcheck,
                      tasty-hunit,
                      deriving-compat

Flag vizdot
    Description: Compile 'Data.Equality.Graph.Dot' module to visualize e-graphs
    Manual: True
    Default: False
