cabal-version:      3.4
name:               hegg-recursion-schemes
version:            0.1.0.0
synopsis:
    A hegg compat layer for recursion-schemes, to make e-graphs from Recursive instances

-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Equality.Graph.Recursive
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.1.0, hegg, data-fix, recursion-schemes
    hs-source-dirs:   src
    default-language: Haskell2010
